--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,42 +2,14 @@
 .navbar {
   background-color: #333;
   padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.navbar-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  padding: 0 1rem;
-}
-
-.page-title {
-  font-size: 1.5rem;
-}
-
-.hamburger-menu {
-  font-size: 2rem;
-  cursor: pointer;
-  display: block;
 }
 
 .navbar-list {
   list-style-type: none;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  display: none;
-}
-
-.navbar-list.open {
-  display: flex;
+  justify-content: space-around;
 }
 
 .navbar-item {
@@ -63,16 +35,11 @@
 }
 
 @media (min-width: 600px) {
-  .navbar-header {
-    display: none;
-  }
-
   .navbar-list {
     flex-direction: row;
-    display: flex;
   }
 
   .navbar-item {
-    margin: 0 1rem;
+    margin: 0;
   }
 }
