--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -9,12 +9,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .navbar-item {
   color: white;
-  margin: 0.5rem 0;
+  font-size: 1.2rem;
+  margin: 1rem 0;
+  padding-right: 3rem;
 }
 
 .navbar-item a {
