--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -7,16 +7,16 @@
 .navbar-list {
   list-style-type: none;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap; /* Ensures items wrap if needed */
 }
 
 .navbar-item {
   color: white;
-  font-size: 1.2rem;
-  margin: 1rem 0;
-  padding-right: 3rem;
+  font-size: 1rem; /* Smaller font size for mobile */
+  margin: 0.5rem;
 }
 
 .navbar-item a {
@@ -37,11 +37,9 @@
 }
 
 @media (min-width: 600px) {
-  .navbar-list {
-    flex-direction: row;
-  }
-
   .navbar-item {
-    margin: 0;
+    font-size: 1.2rem; /* Larger font size for desktop */
+    margin: 1rem 0;
+    padding-right: 3rem;
   }
 }
