--- a/frontend/src/components/YourWordList.css
+++ b/frontend/src/components/YourWordList.css
@@ -68,3 +68,10 @@
   text-align: center;
   color: #666;
 }
+.total-words {
+  font-size: 3rem;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 1rem;
+  text-align: center;
+}
