--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -7,16 +7,13 @@
 .navbar-list {
   list-style-type: none;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap; /* Ensures items wrap if needed */
+  justify-content: space-between;
 }
 
 .navbar-item {
   color: white;
-  font-size: 1rem; /* Smaller font size for mobile */
-  margin: 0.5rem;
+  margin: 0 1rem;
 }
 
 .navbar-item a {
@@ -29,6 +26,7 @@
   border: none;
   color: white;
   cursor: pointer;
+  font-size: 1rem;
 }
 
 .navbar-item button:hover,
@@ -36,10 +34,58 @@
   text-decoration: underline;
 }
 
-@media (min-width: 600px) {
+.language-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.language-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.flag-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 0.5rem;
+}
+
+.dropdown-content {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-item {
+  background: none;
+  border: none;
+  color: white;
+  text-align: left;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-item:hover {
+  background-color: #575757;
+}
+
+@media (max-width: 768px) {
+  .navbar-list {
+    flex-direction: column;
+  }
+
   .navbar-item {
-    font-size: 1.2rem; /* Larger font size for desktop */
-    margin: 1rem 0;
-    padding-right: 3rem;
+    margin: 0.5rem 0;
   }
 }
